# GAMES101

./: .gitignore  README.md
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/代码框架/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/code/: Object.hpp  Renderer.cpp  Renderer.hpp  Triangle.hpp  global.hpp  main.cpp
